# wow-justInTime

./: .env.example  .gitignore  AUTONOMOUS-BRIEF.md  ChatPrinter.lua  Config.lua  Core.lua  JustInTime.toc  Locales.lua  Makefile  Overlay.lua  README.md  State.lua
addon/JustInTime/: CHANGELOG.txt  ChatPrinter.lua  Config.lua  Core.lua  Data.lua  EventTracker.lua  JustInTime.toc  Locales.lua  Overlay.lua  PaceEngine.lua  UI.lua
docs/specs/: 2026-04-25-jit-design.md  2026-04-25-jit-plan-lua.md  2026-04-25-jit-plan-python.md  2026-04-25-jit-smoketest.md  2026-05-09-blizzard-data-source-design.md  2026-05-09-blizzard-data-source-plan.md
scripts/: .gitignore  README.md  jit_config.toml  pyproject.toml
scripts/jit_update/: __init__.py  blizzard.py  cache.py  cli.py  config.py  lua_renderer.py  models.py  pipeline.py  raiderio.py  rate_limiter.py  splits_synthesis.py
scripts/tests/: conftest.py  test_blizzard.py  test_cache.py  test_cli.py  test_config.py  test_integration.py  test_lua_renderer.py  test_models.py  test_pipeline.py  test_pipeline_v2.py  test_raiderio.py  test_rate_limiter.py  test_splits_synthesis.py
scripts/tests/fixtures/: blizzard_leaderboard_sample.json  expected_minimal.lua  raiderio_run_details_no_splits.json  raiderio_run_details_with_splits.json  run_details_sample.json  run_sample.json  runs_aa_p0.json  static_data_mn1.json
