[project]
name = "jit-update"
version = "0.1.0"
description = "Generate JustInTime addon Data.lua from Raider.IO Mythic+ data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
]

[project.scripts]
jit-update = "jit_update.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=jit_update --cov-report=term-missing --cov-fail-under=70"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]
